@@ -1,3 +1,4 @@
+Version 50 	 2010-08-16 	 sending email on activation 
 Version 49 	 2010-08-16 	 Google Apps realted changes. Not tested 
 Version 48 	 2010-08-14 	 Adding related_name to profile user 
 Version 47 	 2010-08-14 	 Mistake in settings 
